--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 09 16:33:12 PKT 2018
-sdk.dir=C\:\\Users\\Mukhtar\\AppData\\Local\\Android\\Sdk
+#Mon Jul 07 16:11:05 PKT 2025
+sdk.dir=C\:\\Users\\s\\AppData\\Local\\Android\\Sdk
